# wayland-bongocat

./: BUILDING.md  BUILD_SYSTEM_README.md  CMakeLists.txt  DEPENDENCIES.md  compile_commands.json
bongocat-server/: client  client-main.c  client-packetcount  client-packetcount.c  hashmap.c  server  server-main.c  server-packetcount  server-packetcount.c
cmake/: toolchain-mingw64.cmake
include/config/: config.h
include/core/: bongocat.h
include/graphics/: animation.h
include/network/: network.h
include/platform/: display.h  platform_input.h  platform_process.h  platform_threads.h  platform_time.h  wayland.h
include/utils/: error.h
scripts/: build-linux.sh  build-windows.sh  make_user.sh
src/config/: config.c  config_watcher.c
src/core/: main.c  multi_monitor.c
src/graphics/: animation.c
src/network/: network.c
src/platform/: input.c  linux_display.c  linux_input.c  linux_process.c  linux_time.c  windows_display.c  windows_input.c  windows_process.c  windows_time.c
src/utils/: error.c  memory.c
